Se implementó el soporte de los archivos sin thumbnail generado retornando el icono segun el tipo de archivo